overlays/development/route.yaml
apiVersion: route.openshift.io/v1

kind: Route

metadata:
  labels:
    app: todonodejs
    name: frontend
  name: frontend
spec:
  host: todo.apps.ocp4.example.com
  path: "/todo"
  to:
    kind: Service
    name: dev-frontend
    weight: 100
  wildcardPolicy: None
